--- a/profile-dashboard.css
+++ b/profile-dashboard.css
@@ -217,14 +217,12 @@ max-width: 1400px;
 margin: 0 auto;
 width: 100%;
 box-sizing: border-box;
+margin-right: -14px;
 }
 .pdb-grid > .pdb-card {
-width: calc(25% - 11px);
+width: calc(25% - 10.5px);
 margin-right: 14px;
 margin-bottom: 14px;
-}
-.pdb-grid > .pdb-card:nth-child(4n) {
-margin-right: 0;
 }
 .pdb-grid > .pdb-card-wide {
 width: 100%;
@@ -758,9 +756,6 @@ padding: 14px 14px 40px;
 width: calc(50% - 6px);
 margin-right: 12px;
 margin-bottom: 12px;
-}
-.pdb-grid > .pdb-card:nth-child(2n) {
-margin-right: 0;
 }
 .pdb-grid > .pdb-card-wide {
 width: 100%;
